fixed an issue with the CL link on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -62,13 +62,15 @@ header {
 }
 
 .origLink {
+	float left;
+	margin-top: 20px;
+	margin-bottom: 40px;
+	display: block;
 	font-family: 'Open Sans', sans-serif;
-	position: absolute;
-	bottom: 14px;
-	left: 21%;
-	font-size: 14px;
+	font-size: 12px;
 	color: rgba(4, 12, 150, 1);
 	text-decoration: none;
+	opacity: .5;
 }
 
 p {
@@ -190,7 +192,8 @@ textarea {
 	border-top: none;
 	border-left: none;
 	border-right: none;
-	width: 70%;
+	width: 60%;
 	box-shadow: none;
+	outline: none;
 
 }
